# mini-project2

./: README.md  main.py  miniproject2.ipynb  pyproject.toml  req1.py  req2.py  requirements.txt  technical_report.md
.github/workflows/: ruff-format.yaml  upgrade-uv-lock.yaml
