[project]
name = "mini-project2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "ipykernel>=7.3.0",
  "kagglehub>=1.0.2",
  "matplotlib>=3.11.0",
  "numpy>=2.5.1",
  "pandas>=3.0.3",
  "pandas-stubs>=3.0.3.260530",
  "scikit-learn>=1.9.0",
  "seaborn>=0.13.2",
  "setuptools>=83.0.0",
  "torch>=2.13.0",
]


[dependency-groups]
dev = [
  "ipykernel>=7.3.0",
  "wandb>=0.28.0",
]


[tool.ruff]
indent-width = 4
